deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desecho.org
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: desecho.org
