deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desecho.org
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - desecho.org
    secretName: desecho.org-tls
  rules:
  - host: desecho.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: desecho.org
            port:
              number: 80
